# StereoCameraStuff

./: README
devel/: .catkin  .rosinstall  setup.sh
devel/include/interface/: Cluster_bound.h  Cluster_bound_list.h
devel/include/mynt_eye_ros_wrapper/: GetInfo.h
devel/lib/mynt_eye_ros_wrapper/: mynteye_wrapper_node
devel/lib/pkgconfig/: interface.pc  mynt_eye_ros_wrapper.pc  point_cloud_seg.pc  seg_visualization.pc
devel/lib/point_cloud_seg/: segmentation
devel/lib/python2.7/dist-packages/interface/msg/: _Cluster_bound.py  _Cluster_bound_list.py  __init__.py
devel/lib/python2.7/dist-packages/mynt_eye_ros_wrapper/srv/: _GetInfo.py  __init__.py
devel/share/interface/cmake/: interface-msg-extras.cmake  interface-msg-paths.cmake  interfaceConfig.cmake
devel/share/mynt_eye_ros_wrapper/cmake/: mynt_eye_ros_wrapper-msg-extras.cmake  mynt_eye_ros_wrapper-msg-paths.cmake  mynt_eye_ros_wrapperConfig.cmake
devel/share/point_cloud_seg/cmake/: point_cloud_segConfig.cmake
devel/share/roseus/ros/interface/: manifest.l
devel/share/roseus/ros/mynt_eye_ros_wrapper/: manifest.l
devel/share/seg_visualization/cmake/: seg_visualizationConfig.cmake
src/modules/: point_cloud_seg.cpp  point_cloud_seg.h
src/modules/interface/: CMakeLists.txt  package.xml
src/modules/point_cloud_seg/: CMakeLists.txt  package.xml
src/modules/point_cloud_seg/include/: segmentation.h
src/modules/point_cloud_seg/launch/: seg_virtual_box.launch
src/modules/point_cloud_seg/src/: cluster_tracker.py  segmentation.cpp
src/modules/seg_visualization/: CMakeLists.txt  package.xml
src/modules/seg_visualization/launch/: cluster_bound_visualization.launch  virtual_box_visualization.launch
src/modules/seg_visualization/src/: cluster_bound_visualizer.py  virtual_box_marker.py
(+18 files in other folders)
